# rustfrompy

./: .dockerignore  Dockerfile  Makefile  README.md
example-rust-ffi-lib/: Cargo.toml
example-rust-ffi-lib/src/: lib.rs
pyapp/: Pipfile  entrypoint.py  pyproject.toml
