[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = ""
authors = ["Nobuyasu Tomura <ntomura92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.14.5"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
